Fix torrent selection dialog in Import Torrent dialog

KUrlRequester receives name filters in the same format as QFileDialog
in KF6. The old format was a leftover from KF5.

Also KUrlRequester will only split the filter on ";;" if we call
`setNameFilter`, i.e. the singular version of the function.

BUG: 383311
FIXED-IN: 24.08.2


(cherry picked from commit 5fcc97bc8e25b254cd491f5cdde7344ad401f8db)

Co-authored-by: Jack Hill <jackhill3103@gmail.com>